<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/app_name"
        android:gravity="center"
        android:text="@string/lobby_join"
        android:textAllCaps="true" />

    <EditText

        android:id="@+id/dialog_join_room_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:nextFocusDown="@id/room_password"
        android:hint="@string/dialog_name"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/dialog_join_room_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:nextFocusUp="@id/room_title"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif"
        android:hint="@string/dialog_password"
        android:inputType="textPassword" />
</LinearLayout>