<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile_drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1"
        tools:context="com.stream.jerye.queue.room.RoomActivity">

        <Toolbar
            android:id="@+id/room_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/colorPrimaryDark"
            android:contentInsetEnd="0dp"
            android:contentInsetStart="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="1">

                <ImageView
                    android:id="@+id/room_toolbar_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/room_profile"
                    android:nextFocusDown="@+id/previous_button"
                    android:nextFocusRight="@+id/room_toolbar_page_icon"
                    android:onClick="openProfileDrawer"
                    android:padding="16dp"
                    android:src="@drawable/menu_icon" />

                <TextView
                    android:id="@+id/room_toolbar_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textDirection="locale"
                    android:gravity="center_vertical"
                    android:paddingEnd="16dp"
                    android:paddingStart="0dp"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    tools:text="Test Room Title" />

                <ImageView
                    android:id="@+id/room_toolbar_page_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/room_swipe"
                    android:nextFocusDown="@+id/next_button"
                    android:nextFocusLeft="@+id/room_toolbar_profile"
                    android:onClick="viewPagerSwipe"
                    android:padding="16dp"
                    android:src="@drawable/chat_icon" />
            </LinearLayout>

        </Toolbar>

        <android.support.v4.view.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layoutDirection="ltr"
            style="@style/music_bar_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="4dp"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:paddingTop="4dp">

            <TextView
                android:id="@+id/music_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textSize="14dp"
                android:text="@string/room_start_time" />

            <SeekBar
                android:id="@+id/music_seekbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_weight="1" />

            <TextView
                android:id="@+id/music_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/room_start_time"
                android:textSize="14dp"
                android:layout_gravity="center_vertical"
                android:textColor="@color/gray_accent" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/background_light" />

        <LinearLayout
            android:layoutDirection="ltr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:orientation="horizontal"
            android:theme="@style/music_bar_style"
            android:weightSum="1">

            <ImageView

                android:id="@+id/previous_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/room_previous"
                android:onClick="playPrevious"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                android:src="@drawable/skip_previous_icon" />

            <ImageView
                android:id="@+id/current_album_image"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/music_current_album" />

            <LinearLayout
                android:layout_width="0dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"

                android:gravity="center"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/music_current_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:duplicateParentState="true"
                    android:ellipsize="marquee"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:maxLines="1"
                    android:scrollHorizontally="true"
                    android:textSize="16dp"
                    tools:text="current song">

                    <requestFocus
                        android:duplicateParentState="true"
                        android:focusable="true"
                        android:focusableInTouchMode="true" />
                </TextView>

                <TextView
                    android:id="@+id/music_current_artist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:duplicateParentState="true"
                    android:ellipsize="marquee"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:maxLines="1"
                    android:scrollHorizontally="true"
                    android:textSize="12dp"
                    tools:text="Artist">

                    <requestFocus
                        android:duplicateParentState="true"
                        android:focusable="true"
                        android:focusableInTouchMode="true" />
                </TextView>


            </LinearLayout>

            <ImageView
                android:id="@+id/play_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/room_play_button"
                android:nextFocusLeft="@+id/previous_button"
                android:nextFocusRight="@+id/next_button"
                android:scaleType="center"
                android:src="@drawable/play_icon" />


            <ImageView
                android:id="@+id/next_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/room_next"
                android:nextFocusLeft="@id/play_button"
                android:nextFocusUp="@id/room_toolbar_page_icon"
                android:onClick="playNext"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                android:src="@drawable/skip_next_icon" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/profile_linear"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:orientation="vertical"
        android:theme="@style/profile_drawer_style"
        android:weightSum="1">

        <TextView
            style="@style/profile_drawer_label_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/members_icon"
            android:text="@string/profile_members" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/users_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            style="@style/profile_drawer_label_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/fingerprint_icon"
            android:text="@string/profile_account" />

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_picture"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:contentDescription="@string/profile_member_thumbnail"
                android:padding="8dp" />

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:contentDescription="@string/profile_spotify"
                android:padding="8dp"
                android:src="@drawable/spotify_icon_white" />
        </LinearLayout>


        <TextView
            android:id="@+id/profile_logout"
            style="@style/profile_drawer_label_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/profile_icon"
            android:onClick="profileLogout"
            android:text="@string/profile_sign_out" />


    </LinearLayout>
</android.support.v4.widget.DrawerLayout>